feat: notification review
